Added Vaccine Item to the project

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -16,10 +16,10 @@
     <div class="navbar-nav-scroll">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <%= link_to 'User', '#', class: 'nav-link' %>
+          <%= link_to 'User', admin_users_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Vaccine Items', '#', class: 'nav-link' %>
+          <%= link_to 'Vaccine Items', admin_vaccine_items_path, class: 'nav-link' %>
         </li>
       </ul>
     </div>
