--- a/app/views/admin/vaccine_items/index.html.erb
+++ b/app/views/admin/vaccine_items/index.html.erb
@@ -18,6 +18,7 @@
           <thead>
             <tr>
               <th><%= I18n.t('admin.vaccine_items.list.name') %></th>
+              <th><%= I18n.t('admin.vaccine_items.list.description') %></th>
               <th><%= I18n.t('admin.vaccine_items.list.active') %></th>
               <th colspan="2"></th>
             </tr>
@@ -27,6 +28,7 @@
             <% @vaccine_items.each do |vaccine_item| %>
               <tr>
                 <td class="align-middle"><%= vaccine_item.name %></span></td>
+                <td class="align-middle"><%= vaccine_item.description %></td>
                 <td class="align-middle"><%= vaccine_item.active %></td>
                 <td class="align-middle"><%= link_to 'Edit', edit_admin_vaccine_item_path(vaccine_item) %></td>
                 <td class="align-middle"><%= link_to 'Destroy', [:admin, vaccine_item], method: :delete, data: { confirm: 'Are you sure?' } %></td>
