--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -21,6 +21,9 @@
         <li class="nav-item">
           <%= link_to 'Vaccine Items', admin_vaccine_items_path, class: 'nav-link' %>
         </li>
+        <li class="nav-item">
+          <%= link_to 'Booking', admin_bookings_path, class: 'nav-link' %>
+        </li>
       </ul>
     </div>
   </nav>
