--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -16,13 +16,16 @@
     <div class="navbar-nav-scroll">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <%= link_to 'User', admin_users_path, class: 'nav-link' %>
+          <%= link_to 'Users', admin_users_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
           <%= link_to 'Vaccine Items', admin_vaccine_items_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Booking', admin_bookings_path, class: 'nav-link' %>
+          <%= link_to 'Bookings', admin_bookings_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Patients', admin_patients_path, class: 'nav-link' %>
         </li>
       </ul>
     </div>
