--- a/app/views/admin/bookings/index.html.erb
+++ b/app/views/admin/bookings/index.html.erb
@@ -15,6 +15,7 @@
               <th><%= I18n.t('admin.booking.ip_address') %></th>
               <th><%= I18n.t('admin.booking.browser_name') %></th>
               <th><%= I18n.t('admin.booking.os_name') %></th>
+              <th><%= I18n.t('admin.booking.edit_patient') %></th>
             </tr>
           </thead>
 
@@ -23,12 +24,13 @@
               <tr>
                 <td class="align-middle"><%= booking.vaccine.name %></span></td>
                 <td class="align-middle"><%= booking.guid %></td>
-                <td class="align-middle"><%= booking.patient.pin %></td>
+                <td class="align-middle"><%= booking.patient&.pin %></td>
                 <td class="align-middle"><%= booking.step_state %></td>
                 <td class="align-middle"><%= booking.created_at %></td>
                 <td class="align-middle"><%= booking.ip_address %></td>
                 <td class="align-middle"><%= booking.browser_name %></td>
                 <td class="align-middle"><%= booking.os_name %></td>
+                <td class="align-middle"><%= link_to 'Patient', edit_admin_patient_path(booking.patient) if booking.patient&.pin %>
               </tr>
             <% end %>
           </tbody>
