--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -27,6 +27,9 @@
         <li class="nav-item">
           <%= link_to 'Patients', admin_patients_path, class: 'nav-link' %>
         </li>
+        <li class="nav-item">
+          <%= link_to 'Slots', admin_business_unit_slots_path, class: 'nav-link' %>
+        </li>
       </ul>
     </div>
   </nav>
