--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -30,6 +30,18 @@
         <li class="nav-item">
           <%= link_to 'Slots', admin_business_unit_slots_path, class: 'nav-link' %>
         </li>
+        <li class="nav-item">
+          <%= link_to 'Business Units', admin_business_units_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Countries', admin_countries_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Cities', admin_cities_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Districts', admin_districts_path, class: 'nav-link' %>
+        </li>
       </ul>
     </div>
   </nav>
