added orders in admin panel and refresh button for slots to step1.html.erb

--- a/app/views/main/steps/step1.html.erb
+++ b/app/views/main/steps/step1.html.erb
@@ -43,6 +43,12 @@
       %>
     </div>
 
+    <div class="col">
+      <button type="button" data-action="click->slots#fetchSlots" class='btn btn-success' data-slots-target='refresh' disabled>
+        refresh
+      </button>
+    </div>
+
     <div class=row data-slots-target="slots"></div>
   </div>
 <% end %>
