added sms messages to admin panel

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -45,6 +45,9 @@
         <li class="nav-item">
           <%= link_to 'Orders', admin_orders_path, class: 'nav-link' %>
         </li>
+        <li class="nav-item">
+          <%= link_to 'SMS', admin_sms_messages_path, class: 'nav-link' %>
+        </li>
       </ul>
     </div>
   </nav>
