added back steps

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,10 @@
 <div class="row">
   <h1><%= I18n.t('web.main.header') %></h1>
 </div>
+<br />
+<div class="row">
+  <h4></h4>
+</div>
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <% @vaccine_items.each do |item| %>
     <div class="col">
@@ -10,11 +14,6 @@
           <p class="card-text"><%= item.description %></p>
           <%= link_to I18n.t('web.main.register_text'), current_step_path(vaccine_pathname(item)), class: 'btn btn-primary' %>
         </div>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">
-          <%= I18n.t('web.main.seats', quantity: rand(1000)) %>
-        </small>
       </div>
     </div>
   <% end %>
