--- a/app/views/main/steps/step2.html.erb
+++ b/app/views/main/steps/step2.html.erb
@@ -58,10 +58,20 @@
     </h5>
   </div>
   <div class="card-body">
-    <%= simple_form_for @record.booking, method: :post, url: next_step_path do |f| %>
-      <%= f.submit I18n.t('web.main.step2_submit'), class: 'btn btn-success' %>
-    <% end %>
+    <div class="btn-toolbar">
+
+      <div class="btn-group me-2">
+        <%= button_to '< Prev', prev_step_path, method: :post, class: 'btn btn-outline-dark' %>
+      </div>
+
+      <div class="btn-group me-2">
+        <%= simple_form_for @record.booking, method: :post, url: next_step_path do |f| %>
+          <%= f.submit I18n.t('web.main.step2_submit'), class: 'step1_submit btn btn-success' %>
+        <% end %>
+      </div>
+    </div>
   </div>
+</div>
   <div class="card-footer">
     <small class="text-muted">
       <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2008/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
