--- a/app/views/main/steps/step0.html.erb
+++ b/app/views/main/steps/step0.html.erb
@@ -4,7 +4,7 @@
   <div class="col">
     <div class="card h-100">
       <div class="card-body">
-        <h5 class="card-title"><strong><%= @current_vaccine.name %></strong></h5>
+        <h5 class="card-title"><strong><%= @current_vaccine&.name %></strong></h5>
         <br />
         <%= simple_form_for @record, method: :post, url: next_step_path do |f| %>
           <%= f.input :first_name %>
@@ -16,13 +16,14 @@
           <%= f.input :email %>
           <%= f.submit I18n.t('web.main.step0_submit', class: 'btn btn-success') %>
         <% end %>
+        <%= button_to '< Prev', prev_step_path, type: "button", method: :post, class: 'btn btn-outline-dark'  %>
       </div>
       <div class="card-footer">
         <small class="text-muted">
           <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2008/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><%= link_to 'Home', root_url %></li>
-              <li class="breadcrumb-item active" aria-current="page">Registration (<%= @current_vaccine.name %>)</li>
+              <li class="breadcrumb-item active" aria-current="page">Registration (<%= @current_vaccine&.name %>)</li>
             </ol>
           </nav>
         </small>
