added available slots to main and back button to step0

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,7 +3,7 @@
 </div>
 <br />
 <div class="row">
-  <h4></h4>
+  <h4><%= "Available Slots #{@slots_count}" %></h4>
 </div>
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <% @vaccine_items.each do |item| %>
