--- a/app/views/main/steps/step0.html.erb
+++ b/app/views/main/steps/step0.html.erb
@@ -14,9 +14,11 @@
           <%= f.input :non_resident %>
           <%= f.input :mobile_phone %>
           <%= f.input :email %>
-          <%= f.submit I18n.t('web.main.step0_submit', class: 'btn btn-success') %>
+          <div>
+            <%= button_to '< Prev', prev_step_path, type: "button", method: :post, class: 'btn btn-outline-dark'  %>
+            <%= f.submit I18n.t('web.main.step0_submit', class: 'btn btn-success'), class: 'btn btn-outline-success'%>
+          </div>
         <% end %>
-        <%= button_to '< Prev', prev_step_path, type: "button", method: :post, class: 'btn btn-outline-dark'  %>
       </div>
       <div class="card-footer">
         <small class="text-muted">
