changed warning to success

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,6 @@
 <% if notice %>
   <div class="row my-3">
-    <h4 id="notice" class="p-3 mb-2 bg-danger text-white"><%= notice %></h4>
+    <h4 id="notice" class="p-3 mb-2 bg-success text-white"><%= notice %></h4>
   </div>
 <% end %>
 <div class="navbar navbar-dark bg-dark">
